# Game

./: CMakeLists.txt  README.md  main.cpp
include/: abstract_game_manager.h  abstract_input_manager.h  abstract_random_manager.h  base.h  game_manager.h  input_manager.h  random_manager.h
include/display/window/: abstract_window_manager.h  window_info.h
include/display/window/ncurses/: ncurses_window_manager.h
src/: game_manager.cpp  input_manager.cpp  random_manager.cpp
src/display/window/ncurses/: ncurses_window_manager.cpp
